--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background-color:#e4e4e4;
+  background-color:#f3f3f3;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -37,7 +37,7 @@ code {
 /** Video.js Customization */
 
 .video-js {
-  background-color:#e4e4e4;
+  background-color:#f3f3f3;
 }
 
 .video-js .vjs-big-play-button {
@@ -65,11 +65,12 @@ code {
 
 .loading-atom {
   animation: loading-atom-spin infinite 20s linear;
-  height: 25vmin;
+  height: 100px;
+  width: 100px;
   position: absolute;
   left: 50%;
-  margin-left: -160px;
-  top: 30%;
+  margin-left: -50px;
+  top: 40%;
 }
 
 @keyframes loading-atom-spin {
